Working, high power usage

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = ch32v
 board = ch32v003f4p6_evt_r0
 framework = noneos-sdk
 debug_tool = wch-link
+monitor_speed = 115200
 lib_deps =
     https://github.com/dennisfrett/CH32V-Direct-NEC-Transmitter
